--- a/handout.tex
+++ b/handout.tex
@@ -871,9 +871,9 @@ These, logically enough, are stored in the `cakeMap/data/' directory
 as .csv files and contain the word `raw' so it is clear which files
 contain the raw data. The file `age-sex-raw.csv', for example is the raw
 age and sex data that was downloaded. As the screenshot in \cref{fraw} shows,
-it was provided in a rather verbose form and needed to be
-processed before it could be usefully used as an input
-in a spatial microsimulation model. `con1.csv' stands for
+these datasets need to be
+processed before they can used as an input
+in our model. `con1.csv' stands for
 `constraint 1' and represents this age/sex data after it has been processed.
 
 \begin{figure}
@@ -883,7 +883,6 @@ in a spatial microsimulation model. `con1.csv' stands for
 \label{fraw}
 \end{figure}
 
-
 To ensure reproducibility in the process of converting the raw data into
 this `spatial microsimulation ready' dataset, all of the steps used to
 clean and rearrange the data have been saved. Take a look at the R script file
@@ -892,15 +891,14 @@ undertake before performing a spatial microsimulation model.
 Here is not the place to delve into the details of data reformatting;
 there are resources dedicated to that \citep{tidy-data, kabacoff2011r}.
 However, it is worth taking a look at the `process-age.R' script and the
-other `process*' files to gain insight into how R can be used to quickly
-and effectively be used to process complex raw data into a form that is
-ready for use in modelling work.
+other `process*' files to see how R can be used to quickly
+process complex raw data into a form that is
+ready for use in spatial microsimulation.
 
 The input data generated through this process of data preparation are named
 `con1.csv' to `con3.csv'. For simplicity, all these were merged into a single
 dataset called `cons.csv'. All the input data for this section
 are loaded with the following commands:
-
 
 \begin{lstlisting}[float=h, caption={Loading the input data for CakeMap (see `cMap.R')}]
 ind <- read.csv("data/cakeMap/ind.csv")
@@ -934,10 +932,12 @@ the former works on a tiny example of 5 input individuals whereas the latter
 calculates weights for 916 individuals. The code is generalisable, meaning
 that the IPF process would still work given slightly different inputs.
 The script would still work if more individuals or zones were added although
-some code may need to be adjusted. For example, to ensure the process works with different
-constraints, including the file `categorise.R'.
+the code will need to be adjusted to accept differenct constraints.
+To ensure the process works with different
+constraints, the file `categorise.R' must also be.
 
-Note the length of `cMap.R' is exactly 100 lines. The additional length is due
+Note that `cMap.R' contains 100 lines --- longer than the `simple.R' file.
+The additional length is due
 to the third constraint, additional iterations (see line 66 onwards) and some
 preliminary analysis. The best way to understand what is happening in this
 script is simply to read through it and run chunks of it in R (remember the 
@@ -960,11 +960,14 @@ ini.ws <- weights[,,num.cons+1]
 
 In the above code, \texttt{weights} is created by the \texttt{array}
 command, which in fact creates many 2 dimensional matrices in a
-`data cube'. If this is confusing, just remember that
+`data cube'. This is different from the weight object used in the
+`simple.R' script, which had only 2 dimensions.
+
+If this is confusing, just remember that
 the `square' weight matrix --- where each column represents a zone
 and each row represents an individual --- can be returned to by
-specifying the third dimension. Because dimensions in R are specified by
-the square brackets, the initial weights can be called by typing
+specifying the third dimension. Dimensions in R are specified by
+the square brackets, so the initial weights can be called by typing
 \texttt{weights[,,4]}. This should result in hundreds of 1s, the initial weights.
 To print a more manageable-sized output, remember how to subset the other
 dimensions: \texttt{weights[1:3,1:5,4]}, for example, will print the first
@@ -978,11 +981,11 @@ within a nested \emph{for loop} that iterates over all zones (j) and
 constraint categories (i):
 
 \begin{lstlisting}[float=h, caption={Saving the new weights after the first
-constraint of IPF --- see line 43 in cMap.R}]
+constraint of IPF --- see line 43 in `cMap.R'}, label=cmapipf]
 weights[which(ind.cat[,i] == 1),j,1] <- con1[j,i] /ind.agg[j,i,1]}}
 \end{lstlisting}
 
-Note that the square brackets are used to great effect in the above line of code.
+Note the heavy use of square brackets in \cref{cmapipf}.
 Let's break down each element of the code within these square `subsetting' brackets:
 \begin{itemize}
  \item \texttt{which(ind.cat[,i] == 1)} is a subset of the rows in the weight matrix
@@ -999,7 +1002,7 @@ Let's break down each element of the code within these square `subsetting' brack
  totals for each category based on the individual's current weight.
 \end{itemize}
 
-The above explanation should help understand what is going on in other
+This explanation should help understand what is going on in other
 parts of the script file also --- for example try printing subsets of
 the \texttt{weights} object after running constraint 1, 2 and then 3 to
 see how the weights change.
