plotting script added

--- a/handout.tex
+++ b/handout.tex
@@ -444,8 +444,9 @@ for males over 50 ($\frac{4}{3}$ and 2). This is as follows
 \textbf{\color{blue}4} + \frac{8}{3} \; = \textbf{\color{blue}6} \frac{\textbf{\color{blue}2}}{\textbf{\color{blue}3}}
 \end{equation}
 
-After performing this process of re-aggregation (\cref{t:m2}) for all categories,
-the next stage is to repeat \cref{eq:ipf} for the age constraint to generate a
+After performing this process of re-aggregation (\cref{t:m2}) for all categories
+in the **age** constraint,n
+the next stage is to repeat \cref{eq:ipf} for the **sex** constraint to generate a
 third set of weights, by replacing
 the $i$ in $sT_{i}$ and $mT(n)_{i}$ with $j$ and incrementing the value of n:
 
